# LibAtrac9

./: CMakeLists.txt
include/libatrac9/: decoder.h  libatrac9.h  structures.h
src/: band_extension.c  bit_allocation.c  decinit.c  decoder.c  imdct.c  libatrac9.c  quantization.c  scale_factors.c  unpack.c
